[package]
name = "halfin"
version = "0.0.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
repository = "https://github.com/luisschwab/halfin"
description = "A Bitcoin-related binary runner used for integration tests"
keywords = ["bitcoin", "tests", "binary", "runner"]
license = "MIT"
readme = "README.md"

[dependencies]
